# DIANNE

./: .gitignore  ACKNOWLEDGEMENTS  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
annotator/: annotation.py  combineCDF.py  extras.py  mask.py  selection.py  stqutils.py  transcriptomics.py  utils.py  vis.py
assets/: README.md  base-container.def  login.html  run-build.sh  submit.sb
dev/: README.md
dianne/: __init__.py  annotation.py  colors.py  combineCDF.py  core.py  download.py  extras.py  interpolation.py  mask.py  selection.py  stqutils.py  utils.py
dianne-core/: ACKNOWLEDGEMENTS  CHANGELOG.md  README.md  pyproject.toml
dianne-core/dianne_core/: __init__.py  combineCDF.py  core.py
dianne-utils/: ACKNOWLEDGEMENTS  CHANGELOG.md  README.md  pyproject.toml
dianne-utils/dianne_utils/: download.py  extras.py  mask.py  stqutils.py  utils.py
dianne-utils/dianne_utils/guided/: annotation.py
dianne-viewer/: ACKNOWLEDGEMENTS  CHANGELOG.md  README.md  pyproject.toml
dianne-viewer/dianne_viewer/: __init__.py  multichannel.py  picker.py  server.py  tiff.py  utils.py  viewer.py  xecellsbuilder.py  xencells.py  xetranscripts.py
dianne-viewer/dianne_viewer/html/: shell.html
dianne-viewer/dianne_viewer/js/: boot.js  cells.js  draw.js  footer_controls.js  fullscreen.js  hover.js  metadata_panel.js  modals.js  monochannel2d.js  multichannel.js  network_gauges.js  overlay_controls.js  perf_monitor.js  sample_ribbon.js  scalebar.js  secondary_layer.js  toolbar.js  transcripts.js  viewport.js
dianne/guided/: annotation.py
ondemand/: Demo-GUI-Atera-BC.ipynb  Demo-GUI-Visium.ipynb  Demo-GUI-single-histology.ipynb  GUI-Fetal-Membranes.ipynb  GUI-GBM.ipynb  GUI-Histology-View.ipynb  Workflow-molecular-interactive-ipmn-demo.ipynb
scripts/: Atera.ipynb  Demo-GUI-Xenium-PDX-Core.ipynb  Demo-GUI-Xenium.ipynb  Demo-GUI-histology.ipynb  Demo-GUI-single-histology.ipynb  ROI-slection-demo.ipynb  View-placenta-CODEX.ipynb  Visium.ipynb  Workflow-A-endocrine-demo.ipynb  Workflow-A-old-young-head-tail-demo.ipynb  Workflow-B-he-histology-demo.ipynb  Workflow-B-spatial-proteomics-demo.ipynb  Workflow-BC-molecular-data-demo.ipynb  Workflow-histology-interactive-tumor-demo.ipynb  Workflow-histology-static-tumor-demo.ipynb  Workflow-molecular-interactive-ipmn-demo.ipynb  Workflow-molecular-static-endocrine.ipynb  box-selection-demo.ipynb  cellszarrbuild.py  cellzarrbuild.sh  differential-annotator-demo.ipynb  differential-annotator-mif-demo.ipynb  launch-jupyter.sh  molecular-data-demo.ipynb  run-jupyter-notebook.sb  test-cellzarrbuild.sh  view-STQ.ipynb
scripts/PDX/: utils.py
viewer/: __init__.py  monochannel.py  multichannel.py  parquetcellsbuilder.py  server.py  tiff.py  utils.py  viewer.py  xecellsbuilder.py  xencells.py  xetranscripts.py  zarrtools.py
viewer/js/: cells.js  demo.js  draw.js  monochannel2d.js  multichannel.js  patches.js  settings.js  tiles.js  toolbar.js  transcripts.js  viewport.js  visium.js
