[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dianne-core"
version = "0.1.0"
description = "Core classifier training, data loading, and spatial inference engine for DIANNE."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sergii Domanskyi", email = "sergii.domanskyi@jax.org" },
]
keywords = ["spatial biology", "histology", "whole slide imaging", "weakly supervised", "classifier"]
# TODO: update once the JAX Non-Commercial Software License is finalised.
# Non-commercial licenses are not OSI-approved, so use the catch-all classifier below.
# PyPI will still accept the package and display the LICENSE file content.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "numba>=0.57",
    "tifffile>=2023.1.23",
    "scanpy>=1.9",
    "joblib>=1.2",
    "tqdm>=4.64",
]

[project.urls]
Homepage = "https://github.com/TheJacksonLaboratory/DIANNE"
Repository = "https://github.com/TheJacksonLaboratory/DIANNE"
"Bug Tracker" = "https://github.com/TheJacksonLaboratory/DIANNE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dianne_core*"]
